--- a/project/composer.json
+++ b/project/composer.json
@@ -1,17 +1,19 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "quadpbx/project",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "First attempt at the QuadPBX project, based on Laravel.",
     "keywords": [
         "laravel",
-        "framework"
+        "framework",
+        "quadpbx"
     ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "quadpbx/base": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -74,5 +76,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "quadpbx"
+        }
+    ]
 }
