Better phpcs rules and make sure vscode understands them

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,5 @@
     },
     "workbench.colorCustomizations": {},
     "phpCodeSniffer.exec.linux": "/root/.config/composer/vendor/bin/phpcs",
+    "phpCodeSniffer.standard": "Automatic"
 }
