There, now I wrote an extensions.conf
It's not much, but it works. See SystemExtConf for the code.

```
[base]
exten => _[0-9]+,1,Hangup()
exten => _[0-9]+,2,Wait(10)

[internal]
exten => s,1,Wait(10)
exten => s,2,Congestion()
```

--- a/project/quadpbx/composer.json
+++ b/project/quadpbx/composer.json
@@ -5,6 +5,7 @@
     "license": "AGPLv3",
     "autoload": {
         "psr-4": {
+            "QuadPBX\\": "quad/src",
             "QuadPBX\\Core\\": "core/src/Core",
             "QuadPBX\\Install\\": "install/src/Install",
             "QuadPBX\\Components\\": "components",
